[package]
name = "flint"
version = "0.1.0"
edition = "2021"

[workspace]

members = [
    "serial",
    "arch",
]

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
log = "0.4.14"
serial = { path = "./serial", optional = true }
arch = { path = "./arch", optional = true }


[features]
default = [ "serial_log", "vga_log" ]
serial_log = [ "serial" ]
vga_log = []

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
