[package]
name = "flint"
version = "0.1.0"
edition = "2021"

[workspace]

members = [
    "arch",
    "arch/ia32e",
    "arch/ia32",
]

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
log = "0.4.14"
arch = { path = "./arch" }
byteorder = { version = "1.3.4", default-features = false }


[features]
default = [ "serial_log", "vga_log" ]
vga_log = []
serial_log = []

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 300
